--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
            <!-- main -->
            <main >
+               <!-- hero section -->
             <section class="hero">
                  <h1 class="header">
                      Build direct, meaningful connections.
@@ -42,6 +43,11 @@
                         we assure you of getting a reply.
                     </p>
                 </span>
+                <!-- download area -->
+                <div class="download">
+                    <img src="./images/Playstore.svg" />
+                    <img src="./images/Appstore.svg" />
+                </div>
             </section>
  
  
