--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
            <!-- main -->
            <main >
                <!-- hero section -->
-            <section class="hero">
+            <section class="hero" id="home">
                  <h1 class="header">
                      Build direct, meaningful connections.
                  </h1>
@@ -45,8 +45,12 @@
                 </span>
                 <!-- download area -->
                 <div class="download">
-                    <img src="./images/Playstore.svg" />
-                    <img src="./images/Appstore.svg" />
+                    <img src="./images/Playstore.svg" alt="google playstore"/>
+                    <img src="./images/Appstore.svg" alt="apple app store"/>
+                </div>
+                <!-- last image of hero section -->
+                <div class="image">
+                    <img src="./images//image'.png" alt="influencers" class="phones">
                 </div>
             </section>
  
