--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
                     <img src="./images//image'.png" alt="influencers" class="phones">
                 </div>
             </section>
+
+            <!-- feature section  -->
+            <section class="feature" id="features">
+                <div>
+                    <h3>
+                        What can Ear1
+                        help you do ?
+                    </h3>
+                </div>
+            </section>
  
  
         </main>
