--- a/index.html
+++ b/index.html
@@ -57,10 +57,16 @@
             <!-- feature section  -->
             <section class="feature" id="features">
                 <div>
-                    <h3>
+                    <h1>
                         What can Ear1
                         help you do ?
-                    </h3>
+                    </h1>
+                    <p class="lead">
+                        Are you looking to connect with influencers
+                        without the hassle of waiting for reply over a 
+                        long time, or an influencer looking to filter your dm's
+                        and connect with your audience, Ear1 has got you covered.
+                    </p>
                 </div>
             </section>
  
