--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                         help you do ?
                     </h1>
                     <p class="lead">
-                        Are you looking to connect with influencers
-                        without the hassle of waiting for reply over a 
+                        Are you an individual looking to connect with an influencer
+                        without the hassle of waiting for the reply over a 
                         long time, or an influencer looking to filter your dm's
                         and connect with your audience, Ear1 has got you covered.
                     </p>
