--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                         long time, or an influencer looking to filter your dm's
                         and connect with your audience, Ear1 has got you covered.
                     </p>
+                    <div class="bubbles">
+                        
+                    </div>
                 </div>
             </section>
  
