--- a/index.html
+++ b/index.html
@@ -56,20 +56,21 @@
 
             <!-- feature section  -->
             <section class="feature" id="features">
-                <div>
-                    <h1>
-                        What can Ear1
-                        help you do ?
-                    </h1>
-                    <p class="lead">
-                        Are you an individual looking to connect with an influencer
-                        without the hassle of waiting for the reply over a 
-                        long time, or an influencer looking to filter your dm's
-                        and connect with your audience, Ear1 has got you covered.
-                    </p>
-                    <div class="bubbles">
-                        
+                <div class="container">
+                    <div class="text">
+                        <h1>
+                            What can Ear1
+                            help you do ?
+                        </h1>
+                        <p class="lead">
+                            Are you an individual looking to connect with an influencer
+                            without the hassle of waiting for the reply over a 
+                            long time, or an influencer looking to filter your dm's
+                            and connect with your audience, Ear1 has got you covered.
+                        </p>
                     </div>
+                   <img  src="./images/bubble.png" class="small"/>
+                   <img  src="./images/bubble.png" class="big"/>
                 </div>
             </section>
  
