--- a/index.html
+++ b/index.html
@@ -73,7 +73,23 @@
                    <img  src="./images/bubble.png" class="big"/>
                 </div>
             </section>
- 
+
+            <!-- fans section -->
+
+            <section class="fans" id="fans">
+                <div class="container">
+                    <div class="btn">
+                        <p class="btnText">fans</p>
+                    </div>
+                    <h2 class="header">
+                        Connect with
+                        top influencers
+                        in your field
+                    </h2>
+
+                </div>
+
+            </section>
  
         </main>
 
