--- a/index.html
+++ b/index.html
@@ -86,7 +86,16 @@
                         top influencers
                         in your field
                     </h2>
+                    <p class="lead">
+                        From Tech to music to business,Ear1 has a 
+                        wide range of industry experts in diverse
+                        fields you have always wanted to connect with. 
+                        Now is your best chance.
+                    </p>
 
+                </div>
+                <div class="influencer">
+                    <img src="./images/influencer.png" class="image" />
                 </div>
 
             </section>
