--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
                 </div>
 
             </section>
+
+            <!-- fans chat section -->
+            <section class="chat">
+                <div class="text">
+                    <div class="btn">
+                        <p class="btnText">fans</p>
+                    </div>
+                </div>
+                <div class="chat-area"></div>
+            </section>
  
         </main>
 
