--- a/index.html
+++ b/index.html
@@ -102,11 +102,18 @@
 
             <!-- fans chat section -->
             <section class="chat">
+                
                 <div class="text">
-                    <div class="btn">
-                        <p class="btnText">fans</p>
+                    <div class="wrapper">
+                            <spam class="btn">
+                                <p class="btnText">fans</p>
+                            </spam>
+                            <div class="msg">
+                                <img src="./images/msg.svg" />
+                            </div>
                     </div>
                 </div>
+
                 <div class="chat-area"></div>
             </section>
  
