--- a/index.html
+++ b/index.html
@@ -105,12 +105,18 @@
                 
                 <div class="text">
                     <div class="wrapper">
-                            <spam class="btn">
+                            <span class="btn">
                                 <p class="btnText">fans</p>
-                            </spam>
+                               
+                            </span>
                             <div class="msg">
                                 <img src="./images/msg.svg" />
                             </div>
+                    </div>
+                    <div class="container">
+                        <h1>Be assured of
+                            replies
+                        </h1>
                     </div>
                 </div>
 
