--- a/index.html
+++ b/index.html
@@ -117,10 +117,20 @@
                         <h1>Be assured of
                             replies
                         </h1>
+                        <p class="lead">
+                            With ear1, we assure you of getting a 
+                            response to your messages. Don't be part
+                            of the noise in the dms. Get ahead of 
+                            the game by paying a small fee.
+                        </p>
                     </div>
                 </div>
 
-                <div class="chat-area"></div>
+                <div class="chat-area">
+                    <div class="center">
+                        
+                    </div>
+                </div>
             </section>
  
         </main>
