--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
                 <div class="chat-area">
                     <div class="center">
-                        
+                        <img src="./images/chat.png" />
                     </div>
                 </div>
             </section>
