--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
                 <div class="chat-area">
                     <div class="center">
                         <img src="./images/chat.png" />
+                        <div class="chat-msg">
+                            <p class="first">
+                                Hey boss I am Charles an upcoming 
+                                producer and I make beats which 
+                                I'd like you to hear
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
