--- a/index.html
+++ b/index.html
@@ -130,11 +130,27 @@
                     <div class="center">
                         <img src="./images/chat.png" />
                         <div class="chat-msg">
-                            <p class="first">
-                                Hey boss I am Charles an upcoming 
-                                producer and I make beats which 
-                                I'd like you to hear
-                            </p>
+                            <div class="first">
+                                <p>
+                                    Hey boss I am Charles an upcoming 
+                                    producer and I make beats which 
+                                    I'd like you to hear
+                                </p>
+                                <small class="time">
+                                    9:05 pm
+                                </small>
+                            </div>
+
+                            <!-- second text -->
+                            <div class="second">
+                                <p>
+                                    Hey, nice to meet you.
+                                </p>
+                                <small class="time">
+                                    9:05 pm
+                                </small>
+                            </div>
+                            <!-- third text -->
                         </div>
                     </div>
                 </div>
