--- a/index.html
+++ b/index.html
@@ -151,6 +151,14 @@
                                 </small>
                             </div>
                             <!-- third text -->
+                            <div class="third">
+                                <p>
+                                    I am not looking to hire a producer now.
+                                </p>
+                                <small class="time">
+                                    9:05 pm
+                                </small>
+                            </div>
                         </div>
                     </div>
                 </div>
