--- a/index.html
+++ b/index.html
@@ -159,6 +159,13 @@
                                     9:05 pm
                                 </small>
                             </div>
+
+                            <!-- input -->
+                            <div class="input">
+                                <p>
+                                    Sorry.Another time
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
