--- a/index.html
+++ b/index.html
@@ -162,9 +162,15 @@
 
                             <!-- input -->
                             <div class="input">
-                                <p>
-                                    Sorry.Another time
-                                </p>
+                                <div class="container">
+                                    <p>
+                                        Sorry.Another time
+                                    </p>
+                                    <div class="images">
+                                        <img src="./images/attachment.png" alt="attachment" class="clip1">
+                                        <img src="./images/microphone.png" alt="attachment" class="clip">
+                                    </div>
+                            </div>
                             </div>
                         </div>
                     </div>
