--- a/index.html
+++ b/index.html
@@ -168,9 +168,12 @@
                                     </p>
                                     <div class="images">
                                         <img src="./images/attachment.png" alt="attachment" class="clip1">
-                                        <img src="./images/microphone.png" alt="attachment" class="clip">
+                                        <img src="./images/microphone.png" alt="attachment" class="mic">
                                     </div>
-                            </div>
+                                </div>
+                                <div class="send">
+                                    <img src="./images/send.png" alt="send">
+                                </div>
                             </div>
                         </div>
                     </div>
