--- a/index.html
+++ b/index.html
@@ -179,6 +179,29 @@
                     </div>
                 </div>
             </section>
+
+            <!-- influncers section -->
+            <section class="influencers" id="influencers">
+                <div class="image">
+                    <img src="./images/Black.png" alt="black matte 2">
+                </div>
+                <!-- text portion -->
+                <div class="text">
+                    <div class="btn">
+                        <p class="btnText">influencer</p>
+                        
+                    </div>
+                    <h1 class="header">
+                        Earn money while you chat
+                    </h1>
+                    <p class="lead">
+                        As an influencer, you get paid by your audience 
+                        to connect with them. That way to maximize time 
+                        while earning.
+                    </p>
+                </div>
+
+            </section>
  
         </main>
 
