--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./footer.css">
+
     <title>ear1</title>
 </head>
 <body>
@@ -55,7 +57,7 @@
             </section>
 
             <!-- feature section  -->
-            <section class="feature" id="features">
+            <section class="feature">
                 <div class="container">
                     <div class="text">
                         <h1>
@@ -201,6 +203,41 @@
                     </p>
                 </div>
 
+            </section>
+            <!-- black section -->
+            <section class="black">
+                <div class="image">
+                    <img src="./images/incoming.png" alt="incoming">
+                </div>
+                <div class="text">
+                    <div class="container">
+                            <div class="btn">
+                                <p class="btnText">
+                                    influencer
+                                </p>
+                            </div>
+                            <div class="filter">
+                                <img src="./images/filter.svg" alt="filter icon">
+                            </div>
+                    </div>
+                    <div class="wrapper">
+                        <h1 class="header">
+                            Filter the noise in the dm's
+                        </h1>
+                        <p class="lead">
+                            Ear1 helps you get rid of all the noise 
+                            in your dm's across other social media apps.
+                            This way, you are sure to connect with serious 
+                            people and make genuine business and personal 
+                            connections.
+
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <!-- ads image -->
+            <section class="ad" id="features">
+                    <img src="./images/Features.png" alt="">
             </section>
  
         </main>
