--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         in your field
                     </h2>
                     <p class="lead">
-                        From Tech to music to business,Ear1 has a 
+                        From Tech to music to business, Ear1 has a 
                         wide range of industry experts in diverse
                         fields you have always wanted to connect with. 
                         Now is your best chance.
@@ -241,6 +241,12 @@
             </section>
  
         </main>
+        <div class="divider">
+            <div class="line"></div>
+        </div>
+        <footer>
+
+        </footer>
 
 </body>
 </html>
