--- a/index.html
+++ b/index.html
@@ -241,11 +241,62 @@
             </section>
  
         </main>
+        <!-- divider -->
         <div class="divider">
             <div class="line"></div>
         </div>
-        <footer>
-
+        <!-- footer -->
+        <footer class="footer">
+            <div class="social-icons">
+                <div class="logo">
+                    <img src="./images/footerLogo.svg" alt="logo">
+                </div>
+                <div class="media">
+                    <img src="./images/fb.svg" alt="facebook logo">
+                    <img src="./images/ig.svg" alt="instagram logo">
+                    <img src="./images/tt.svg" alt="twitter logo">
+                </div>
+            </div>
+            <div class="container">
+                <p class="lead">
+                    <strong>Be in the know.</strong>
+                    Get access to amazing offers and discounts
+                </p>
+                <form>
+                    <input type="text" placeholder="Enter your email address">
+                    <button>submit</button>
+                </form>
+                <!-- footer navigation -->
+                <div class="navigation">
+                    <!-- links -->
+                    <div class="links">
+                        <p class="title">Links</p>
+                        <a href="#home" class="link">Home</a>
+                        <a href="#fans" class="link">For Fans</a>
+                        <a href="#influencers" class="link">For Influencers</a>
+                        <a href="faqs" class="link">FAQ's</a>
+                    </div>
+                    <!-- get help -->
+                    <div class="links">
+                        <p class="title">Get help</p>
+                        <a href="" class="link">Support</a>
+                        <a href="#faqs" class="link">FAQ's</a>
+                        <a href="" class="link">Partnership</a>
+                    </div>
+                    <!-- Download -->
+                    <div class="links">
+                        <p class="title">Download</p>
+                        <a href="" class="link">Android</a>
+                        <a href="" class="link">IOS</a>
+                    </div>
+                    <!-- Resources -->
+                    <div class="links">
+                        <p class="title">Resources</p>
+                        <a href="" class="link">Terms of service</a>
+                        <a href="" class="link">Privacy policy</a>
+                    </div>
+                </div>
+            </div>
         </footer>
 
 </body>
