--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <section class="feature">
                 <div class="container">
                     <div class="text">
-                        <h1>
+                        <h1 class="header">
                             What can Ear1
                             help you do ?
                         </h1>
@@ -116,7 +116,7 @@
                             </div>
                     </div>
                     <div class="container">
-                        <h1>Be assured of
+                        <h1 class="header">Be assured of
                             replies
                         </h1>
                         <p class="lead">
