--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                      Build direct, meaningful connections.
                  </h1>
                  <span class="lead-container">
-                    <p class="lead first">
+                    <p class="lead first px">
                         Ear1 helps you to connect with your favorite 
                         influencers 
                     </p>
-                    <p class="lead">
+                    <p class="lead px">
                         for small fees. what's more?
                         we assure you of getting a reply.
                     </p>
