--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <!-- nav items -->
         <ul class="nav-items">
             <li><a href="#home">home</a></li>
-            <li><a href="#fans">for fans</a></li>
-            <li><a href="#influencers">for influencers</a></li>
+            <li><a href="#fans"><span class="hide">for</span> fans</a></li>
+            <li><a href="#influencers"><span class="hide">for</span> influencers</a></li>
             <li><a href="#features">features</a></li>
             <li><a href="#faqs">FAQ's</a></li>
         </ul>
